--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-form-data": "^2.0.17",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "react-map-gl": "^7.0.10"
   }
 }
