--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
     "react-map-gl": "^7.0.10"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23"
   }
 }
