--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express-form-data": "^2.0.17",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "node-fetch": "^3.2.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
