--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
     "node-fetch": "^3.2.3"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.4",
-    "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.23"
+    "autoprefixer": "^10.4.4"
   }
 }
