adjust file for deployment issue

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,3 +5,8 @@
     to="/.netlify/functions/api:splat"
     from="/*"
     status=200 
+    to="https://spontaneous-faloodeh-8cb795.netlify.app/*
+    from="/api/*"
+    status = 200
+    force = true
+    headers = {X-From = "Netlify"}
