--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
-    "node-fetch": "^3.2.3"
+    "node-fetch": "^3.2.3",
+    "serverless-http": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4"
